katalog/pomerium/deploy.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pomerium

spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: pomerium
          image: pomerium/pomerium
          ports:
            - containerPort: 8443
              name: https
              protocol: TCP
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          args:
            - -config
            - /etc/pomerium/policy.yml
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /etc/pomerium/
              name: pomerium-policy
      volumes:
        - configMap:
            defaultMode: 420
            name: pomerium-policy
          name: pomerium-policy
