katalog/pomerium/svc.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: v1
kind: Service
metadata:
  name: pomerium
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8080
    - port: 9090
      name: metrics
      targetPort: 9090
    - port: 5443
      name: grpc
      targetPort: 5443
